force-app/main/default/objects/ActiveWar__c/ActiveWar__c.object-meta.xml
<CustomObject>
    <label>ActiveWar</label>
    <pluralLabel>ActiveWars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>ActiveWar Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>