force-app/main/default/objects/ActiveWar__c/fields/Defender__c.field-meta.xml
<CustomField>
    <fullName>Defender__c</fullName>
    <label>Defender</label>
    <type>Text</type>
    <length>255</length>
</CustomField>