force-app/main/default/objects/ActiveWar__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>History</label>
    <type>Lookup</type>
    <referenceTo>History__c</referenceTo>
    <relationshipName>ActiveWar_History</relationshipName>
</CustomField>