force-app/main/default/objects/ActiveWar__c/fields/Original_wargoal__c.field-meta.xml
<CustomField>
    <fullName>Original_wargoal__c</fullName>
    <label>Original wargoal</label>
    <type>Lookup</type>
    <referenceTo>Original_wargoal__c</referenceTo>
    <relationshipName>ActiveWar_Original_wargoal</relationshipName>
</CustomField>